Fixed some issue so gradle can produce Javadoc